Tue May 21 2002  Vitezslav Samel <samel@mail.cz>
	* poshist.c, scrn.c, uformat.c:
	include some headers which are needed to compile without warnings about
	implicit function declarations

Sun May  5 2002  Vitezslav Samel <samel@mail.cz>
	* NEWS:
	change wrong version for the last entry

Sun May  5 2002  Vitezslav Samel <samel@mail.cz>
	* configure.ac:
	solaris compile fix; check for snprintf - if not available, kick out

Sun Mar 10 2002  Vitezslav Samel <samel@mail.cz>
	* uformat.c:
	remove deadlock when reformating paragraph (badly converted whitel()
	to isspace() from removed zstr.c in joe-2.9.2)

Wed Jan 30 2002  Vitezslav Samel <samel@mail.cz>
	* b.c:
	use GCHAR macro - clean up the source

Wed Jan 30 2002  Vitezslav Samel <samel@mail.cz>
	* b.c:
	change 0 to NULL when used as pointer

Wed Jan 30 2002  Vitezslav Samel <samel@mail.cz>
	* b.c:
	change "expr, expr" to "expr; expr"

Wed Jan 30 2002  Vitezslav Samel <samel@mail.cz>
	* b.c, b.h, types.h:
	cosmetic cleanup: add comments - this patch doesn't touch code

Fri Jan 25 2002  Vitezslav Samel <samel@mail.cz>
	* termcap.c:
	strcmp() can return values other than -1/0/+1 (fix supplied by
	Schermann Gabor <gaborsch@mailbox.hu>)

Sat Jan 19 2002  Vitezslav Samel <samel@mail.cz>
	* ublock.c:
	don't use markb and markk after they are freed (fixes segfault)

Sun Jan 13 2002  Vitezslav Samel <samel@mail.cz>
	* regex.c:
	fix char escaping in \+ case

Sat Jan 12 2002  Vitezslav Samel <samel@mail.cz>
	* help.c, types.h:
	get back context help (vanished in cleaning patch to help by marx_sk)
	(context help is now only used in search prompt window)

Tue Jan  8 2002  Vitezslav Samel <samel@mail.cz>
	* vs.c, vs.h:
	change sELEMENT #define to typedef

Mon Jan  7 2002  Vitezslav Samel <samel@mail.cz>
	* acinclude.m4, configure.ac, tty.c, umath.c, ushell.c, utils.c,
	utils.h:
	cleanup signals handling (sigaction() / sigvec() / signal())

Sun Jan  6 2002  Vitezslav Samel <samel@mail.cz>
	* cmd.c: